--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,16 +48,14 @@ test_src:
     - linux
   image: registry.orr.noaa.gov/gnome/pygnome:$UPSTREAM_BRANCH
   script:
-    - conda install mamba
     - yum install redis -y
     - redis-server --daemonize yes
     - git clone --depth 1 -b develop https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.orr.noaa.gov/gnome/libgoods.git
     - git clone --depth 1 -b develop https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.orr.noaa.gov/gnome/mc-goods.git
-    - mamba install -y --file conda_requirements.txt
+    - conda install -y --file conda_requirements.txt
                        --file conda_requirements_test.txt
                        --file libgoods/conda_requirements.txt
 
-    # - mamba uninstall --force mc-goods  # --force flag not working?
     - conda uninstall --force mc-goods
 
     - pushd mc-goods && pip install . && popd
@@ -115,7 +113,7 @@ test_img:
     entrypoint: ["/bin/bash", "-c"]
   script:
     - cd /webgnomeapi
-    - mamba install -y --file conda_requirements_test.txt
+    - conda install -y --file conda_requirements_test.txt
     - redis-server --daemonize yes
     - pytest webgnome_api/tests
 
