--- a/config-example.ini
+++ b/config-example.ini
@@ -9,7 +9,7 @@ pyramid.debug_templates = true
 pyramid.default_locale_name = en
 
 pyramid.includes = cornice
-                   pyramid_redis_sessions
+                   pyramid_session_redis
 
 cors_policy.origins = http://0.0.0.0:8080
                       http://localhost:8080
