Revert "Upgrade package dependencies to pyramid 2.0"
This reverts commit 47e6ce3dff59728bc8fe808068ac68bc266f0dcb.

--- a/config-example.ini
+++ b/config-example.ini
@@ -9,7 +9,7 @@ pyramid.debug_templates = true
 pyramid.default_locale_name = en
 
 pyramid.includes = cornice
-                   pyramid_session_redis
+                   pyramid_redis_sessions
 
 cors_policy.origins = http://0.0.0.0:8080
                       http://localhost:8080
