Cleaned up a few leftover references to the old pyramid_redis_sessions package.

--- a/webgnome_api/tests/pytest.ini
+++ b/webgnome_api/tests/pytest.ini
@@ -5,5 +5,5 @@ markers =
 
 filterwarnings =
     ignore::DeprecationWarning:redis.*
-    ignore::DeprecationWarning:pyramid_redis_sessions.*
+    ignore::DeprecationWarning:pyramid_session_redis.*
 
