--- a/environment.lock.yaml
+++ b/environment.lock.yaml
@@ -195,7 +195,7 @@ dependencies:
 - pyproj=3.3.1
 - pyramid=1.10.8
 - pyramid_log=1.0.0
-- pyramid_redis_sessions=1.0.1
+- pyramid_session_redis=1.6.3
 - pyshp=2.3.0
 - pysocks=1.7.1
 - pytest=7.1.2
