CI: Added maintenance tasks to prune the /tmp directory of old temp files.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -745,6 +745,24 @@ prune_session_folders_dev:
   script:
     - docker exec $CONTAINER_NAME /bin/bash $SCRIPT_NAME
 
+prune_tmp_files_dev:
+  stage: maintenance
+  image: registry.orr.noaa.gov/erd/centos-conda/centos7-python$PYTHON_VER
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+  environment:
+    name: dev-deployment
+    url: https://gnome-dev.orr.noaa.gov
+  tags:
+    - gnome-dev
+    - deploy
+  variables:
+    CONTAINER_NAME: webgnome_api
+    SCRIPT_NAME: ./prune_old_tmp_files.sh
+  script:
+    - docker exec $CONTAINER_NAME /bin/bash $SCRIPT_NAME
+
+
 prune_session_folders_stage:
   stage: maintenance
   image: registry.orr.noaa.gov/erd/centos-conda/centos7-python$PYTHON_VER
@@ -762,3 +780,54 @@ prune_session_folders_stage:
   script:
     - docker exec $CONTAINER_NAME /bin/bash $SCRIPT_NAME
 
+prune_tmp_files_stage:
+  stage: maintenance
+  image: registry.orr.noaa.gov/erd/centos-conda/centos7-python$PYTHON_VER
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+  environment:
+    name: stage-deployment
+    url: https://gnome-stage.orr.noaa.gov
+  tags:
+    - gnome-stage
+    - deploy
+  variables:
+    CONTAINER_NAME: webgnome_api
+    SCRIPT_NAME: ./prune_old_tmp_files.sh
+  script:
+    - docker exec $CONTAINER_NAME /bin/bash $SCRIPT_NAME
+
+
+prune_session_folders_production:
+  stage: maintenance
+  image: registry.orr.noaa.gov/erd/centos-conda/centos7-python$PYTHON_VER
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+  environment:
+    name: production-deployment
+    url: https://gnome.orr.noaa.gov
+  tags:
+    - gnome-prod
+    - deploy
+  variables:
+    CONTAINER_NAME: webgnome_api
+    SCRIPT_NAME: ./prune_old_session_folders.sh
+  script:
+    - docker exec $CONTAINER_NAME /bin/bash $SCRIPT_NAME
+
+prune_tmp_files_production:
+  stage: maintenance
+  image: registry.orr.noaa.gov/erd/centos-conda/centos7-python$PYTHON_VER
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+  environment:
+    name: production-deployment
+    url: https://gnome.orr.noaa.gov
+  tags:
+    - gnome-prod
+    - deploy
+  variables:
+    CONTAINER_NAME: webgnome_api
+    SCRIPT_NAME: ./prune_old_tmp_files.sh
+  script:
+    - docker exec $CONTAINER_NAME /bin/bash $SCRIPT_NAME
