--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -328,6 +328,7 @@ deploy_api_dev:
       docker volume inspect $MODELS_VOLUME >/dev/null 2>&1 || docker volume
       create $MODELS_VOLUME
     - docker pull $IMAGE_TAG
+    - docker swarm init || true
     - docker service rm $CONTAINER_NAME
     - docker service create --name $CONTAINER_NAME --mount
       src=$MODELS_VOLUME,dst=/webgnomeapi/models --replicas=40 $IMAGE_TAG
