--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -205,8 +205,8 @@ deploy_redis_dev:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - docker pull $IMAGE_TAG
     - docker service rm $CONTAINER_NAME || true
-    - docker service create --name $CONTAINER_NAME --endpoint-mode dnsrr
-      $IMAGE_TAG
+    - docker service create --name $CONTAINER_NAME --network $APP_NETWORK
+      --endpoint-mode dnsrr $IMAGE_TAG
 
 stop_redis_dev:
   stage: deploy
@@ -264,13 +264,13 @@ deploy_proxy_dev:
     - ls -la $GNOME_DEPLOY_FOLDER/config/nginx
     - ls -la /etc/ssl/certs/*
     - docker service rm webgnome_api_loadbalancer || true
-    - docker service create --name webgnome_api_loadbalancer --endpoint-mode
-      dnsrr --mount
+    - docker service create --name webgnome_api_loadbalancer --network
+      $APP_NETWORK --endpoint-mode dnsrr --mount
       type=bind,source=$GNOME_DEPLOY_FOLDER/config/haproxy,destination=/usr/local/etc/haproxy:ro
       haproxy:2.3
     - docker service rm $CONTAINER_NAME || true
-    - docker service create --name $CONTAINER_NAME -p $PORT_MAPPING1 -p
-      $PORT_MAPPING2 --mount
+    - docker service create --name $CONTAINER_NAME --network $APP_NETWORK -p
+      $PORT_MAPPING1 -p $PORT_MAPPING2 --mount
       type=bind,source=$GNOME_DEPLOY_FOLDER/config/nginx,destination=/etc/nginx/
       --mount type=bind,source=/etc/ssl/certs,destination=/etc/ssl/certs
       $IMAGE_TAG
@@ -328,8 +328,8 @@ deploy_api_dev:
     - docker pull $IMAGE_TAG
     - docker swarm init || true
     - docker service rm $CONTAINER_NAME || true
-    - docker service create --name $CONTAINER_NAME --mount
-      source=$MODELS_VOLUME,destination=/webgnomeapi/models --network
+    - docker service create --name $CONTAINER_NAME --network $APP_NETWORK
+      --mount source=$MODELS_VOLUME,destination=/webgnomeapi/models --network
       $APP_NETWORK --endpoint-mode dnsrr --replicas=$API_SCALE $IMAGE_TAG
     - docker service ps $CONTAINER_NAME
     - docker service logs $CONTAINER_NAME
